--- a/src/App.css
+++ b/src/App.css
@@ -479,12 +479,37 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     width: 90% !important;
     height: 300px;
   }
+  .control{
+    display: block !important;
+
+    
+  }
+  .cols{
+    display: flex;
+  flex-flow: row wrap;
+  }
+  .colss{
+    /* flex-basis: 4%; */
+  }
 }
 @media only screen and (min-width: 270px) and (max-width: 410px) {
+  .cols{
+    display: flex;
+  flex-flow: row wrap;
+  }
+  /* .colss{
+    flex-basis: 100%;
+  } */
+ 
   .cad{
     display: block !important;
     width: 90% !important;
     height: 300px;
+  }
+  .control{
+    display: block !important;
+
+    
   }
  
 }
